<resources>
    <string name="app_name">MajorProject(PDD)</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="select_image">Capture the image or select from files</string>
    <string name="capture_button">Capture</string>
    <string name="file_button">Files</string>
    <string name="plant_image_description">Plant with leaves image.</string>
    <string name="detect_image_text">Detect disease for above image</string>
    <string name="detect_button">Detect</string>
    <string name="selected_image_description">Captured or selected image</string>
    <string name="result_heading">Results</string>
    <string name="plant_name">Plant name: %s</string>
    <string name="disease_name">Disease name: %s</string>
    <string name="take_another">Take another Pic</string>
</resources>